2012-01-04	The InnoDB Team

	* row/row0mysql.c:
	Fix Bug#12400341: INNODB CAN LEAVE ORPHAN IBD FILES AROUND

2011-12-21	The InnoDB Team

	* include/ut0rnd.ic:
	Fix Bug#11866367:FPE WHEN SETTING INNODB_SPIN_WAIT_DELAY

2011-12-13	The InnoDB Team

	* handler/ha_innodb.cc, innodb.test, innodb.result:
	Fix Bug#13117023: InnoDB was incrementing the handler_read_key, 
	also the SSV::ha_read_key_count, at the wrong place.   

2011-12-10	The InnoDB Team

	* include/page0page.h, page/page0page.c:
	Fix Bug#13418887 ERROR IN DIAGNOSTIC FUNCTION PAGE_REC_PRINT()

2011-11-10	The InnoDB Team

	* handler/ha_innodb.cc, row/row0ins.c, innodb_replace.test:
	Fix Bug#11759688 52020: InnoDB can still deadlock
	on just INSERT...ON DUPLICATE KEY a.k.a. the reintroduction of
	Bug#7975 deadlock without any locking, simple select and update

2011-11-08	The InnoDB Team

	* btr/btr0pcur.c, include/btr0pcur.h, include/btr0pcur.ic:
	Fix Bug#13358468 ASSERTION FAILURE IN BTR_PCUR_GET_BLOCK

2011-10-27	The InnoDB Team

	* row/row0mysql.c:
	Fix Bug #12884631 62146: TABLES ARE LOST FOR DDL

2011-10-25	The InnoDB Team

	* handler/ha_innodb.cc, row/row0ins.c:
	Fix Bug#13002783 PARTIALLY UNINITIALIZED CASCADE UPDATE VECTOR

2011-10-20	The InnoDB Team

	* btr/btr0cur.c:
	Fix Bug#13116045 Compilation failure using GCC 4.6.1 in btr/btr0cur.c

2011-10-12	The InnoDB Team

	* btr/btr0cur.c, btr/btr0sea.c, buf/buf0buf.c, buf/buf0lru.c,
	ha/ha0ha.c, handler/ha_innodb.cc, ibuf/ibuf0ibuf.c, include/btr0sea.h,
	include/btr0types.h, include/buf0buf.h, include/ha0ha.h,
	include/ha0ha.ic, include/row0upd.ic, include/sync0sync.h,
	page/page0page.c, sync/sync0sync.c:
	Fix Bug#13006367 62487: innodb takes 3 minutes to clean up
	the adaptive hash index at shutdown

2011-10-04	The InnoDB Team

	* include/sync0rw.h, sync/sync0rw.c:
	Fix Bug#13034534 RQG TESTS FAIL ON WINDOWS WITH CRASH NEAR
	RW_LOCK_DEBUG_PRINT

2011-09-20	The InnoDB Team

	* row/row0purge.c: